--- a/app/19guide/views/shakedevice.html
+++ b/app/19guide/views/shakedevice.html
@@ -4,7 +4,7 @@
 		<label class="col-xs-2 control-label">机器码</label>
 		<div class="col-xs-6">
 			<input type="text" class="form-control" placeholder="请输入机器码"
-			ng-model="obj.code"
+			ng-model="obj.code" ng-disabled="isable=='1'"
 			>
 		</div>
 	</div>
@@ -13,7 +13,7 @@
 		<label class="col-xs-2 control-label">设备名称</label>
 		<div class="col-xs-6">
 			<input type="text" class="form-control" placeholder="设备名称"
-			ng-model="obj.name"
+			ng-model="obj.name" ng-disabled="isable=='1'"
 			>
 		</div>
 	</div>
@@ -23,7 +23,7 @@
 		<div class="col-xs-6">
 			<select class="form-control" ng-model="obj.binding_type" 
               ng-options="type.value as type.label for type in typearr"
-              ng-change="changeCompany(obj.binding_type)"
+              ng-change="changeCompany(obj.binding_type)" ng-disabled="isable=='1'"
             >
             </select>
 		</div>
@@ -34,7 +34,7 @@
 		<div class="col-xs-6">
 			<select class="form-control" ng-model="obj.binding_company_code" 
               ng-options="type.binding_company_code as type.name for type in companyarr"
-              ng-change="changeGroup(obj.binding_company_code)"
+              ng-change="changeGroup(obj.binding_company_code)" ng-disabled="isable=='1'"
             >
             </select>
 		</div>
@@ -51,25 +51,26 @@
 	</div> -->
 
 	
-
-	<div class="form-group">
-		<label class="col-xs-2 control-label">绑定团名</label>
-		<div class="col-xs-6">
-			<select class="form-control" ng-model="obj.binding_code" 
-              ng-options="group.group_id as group.group_name for group in grouparr"
-            >
-            </select>
+	<div ng-show="isshow=='1'">
+		<div class="form-group">
+			<label class="col-xs-2 control-label">绑定团名</label>
+			<div class="col-xs-6">
+				<select class="form-control" ng-model="obj.binding_code" 
+	              ng-options="group.group_id as group.group_name for group in grouparr"
+	            >
+	            </select>
+			</div>
 		</div>
-	</div>
 
-	<div class="form-group">
-		<label class="col-xs-2 control-label">绑定时间</label>
-		<div class="col-xs-6">
-			<div class="input-group">
-		    	<input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.start.date" is-open="section.start.opened" ng-required="true" close-text="Close" readonly/>
-		        <span class="input-group-btn">
-		          <button type="button" class="btn btn-default" ng-click="open(section.start)"><i class="glyphicon glyphicon-calendar"></i></button>
-		        </span>
+		<div class="form-group">
+			<label class="col-xs-2 control-label">绑定时间</label>
+			<div class="col-xs-6">
+				<div class="input-group">
+			    	<input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.start.date" is-open="section.start.opened" ng-required="true" close-text="Close" readonly/>
+			        <span class="input-group-btn">
+			          <button type="button" class="btn btn-default" ng-click="open(section.start)"><i class="glyphicon glyphicon-calendar"></i></button>
+			        </span>
+			    </div>
 		    </div>
 	    </div>
     </div>
