--- a/app/19guide/views/evaluatechart2.html
+++ b/app/19guide/views/evaluatechart2.html
@@ -14,39 +14,58 @@
 				&nbsp;&nbsp; -->
 
 				<label>统计类型</label>&nbsp;&nbsp;
-				<select class="form-control" ng-model="searchform.binding_type">
-					<option value="1"> 日期 </option>
-					<option value="2"> 时间 </option>
-					<option value=""> 月份 </option>
+				<select class="form-control" ng-model="obj.type_month" ng-disabled="isable=='1'">
+					<option value="1"> 月份 </option>
+					<option value="2"> 日期 </option>
+					<option value="3"> 时间 </option>
 				</select>
 				&nbsp;&nbsp;
 
 				<label>年份</label>&nbsp;&nbsp;
-				<select class="form-control" ng-model="searchform.binding_type">
-					<option value="1"> 2017 </option>
-					<option value="2"> 2018 </option>
-					<option value=""> 2016 </option>
+				<select class="form-control" ng-model="obj.type_year" ng-disabled="isable=='1'">
+					<option value="2016"> 2016 </option>
+					<option value="2017"> 2017 </option>
+					<option value="2018"> 2018 </option>
 				</select>
 				&nbsp;&nbsp;
 
 				<label>时间</label>&nbsp;&nbsp;
-				<select class="form-control" ng-model="searchform.binding_type">
-					<option value="1"> 二月 </option>
-					<option value="2"> 三月 </option>
-					<option value=""> 一月 </option>
+				<select class="form-control" ng-model="obj.type_playtime_start" ng-disabled="isable=='1'">
+					<option value="1"> 一月 </option>
+					<option value="2"> 二月 </option>
+					<option value="3"> 三月 </option>
+					<option value="4"> 四月 </option>
+					<option value="5"> 五月 </option>
+					<option value="6"> 六月 </option>
+					<option value="7"> 七月 </option>
+					<option value="8"> 八月 </option>
+					<option value="9"> 九月 </option>
+					<option value="10"> 十月 </option>
+					<option value="11"> 十一月 </option>
+					<option value="12"> 十二月 </option>
 				</select>
 				&nbsp;&nbsp;至&nbsp;&nbsp;
-				<select class="form-control" ng-model="searchform.binding_type">
-					<option value="1"> 二月 </option>
-					<option value="2"> 三月 </option>
-					<option value=""> 十二月 </option>
+				<select class="form-control" ng-model="obj.type_playtime_end" ng-disabled="isable=='1'">
+					<option value="1"> 一月 </option>
+					<option value="2"> 二月 </option>
+					<option value="3"> 三月 </option>
+					<option value="4"> 四月 </option>
+					<option value="5"> 五月 </option>
+					<option value="6"> 六月 </option>
+					<option value="7"> 七月 </option>
+					<option value="8"> 八月 </option>
+					<option value="9"> 九月 </option>
+					<option value="10"> 十月 </option>
+					<option value="11"> 十一月 </option>
+					<option value="12"> 十二月 </option>
 				</select>
 
 				&nbsp;&nbsp;
 				
 				
 
-				<button type="button" class="btn btn-default search pull-right" ng-click="search()">立即搜索</button>
+				<button type="button" class="btn btn-default search pull-right" 
+					ng-click="load()" ng-disabled="isable=='1'">立即搜索</button>
 
 				</div>
 
@@ -65,14 +84,15 @@
         <div class="form-group form-inline">
             <div class="col-sm-12">
 			<label>景区名称</label>&nbsp;&nbsp;
-			<select class="form-control" ng-model="searchform.ta">
-				<option value="1"> 故宫 </option>
-				<option value="2"> 景区评价 </option>
-				<option value=""> -- 全部 -- </option>
-			</select>
+			<select class="form-control" ng-model="obj.binding_company_code" 
+              ng-options="type.binding_company_code as type.name for type in companyarr"
+              ng-change="changecompany()"
+            >
+            	<option value=""> -- 全部 -- </option>
+            </select>
 			&nbsp;&nbsp;
 
-			<button type="button" class="btn btn-default search pull-right" ng-click="search()">追加</button>
+			<button type="button" class="btn btn-default search " ng-click="add()">追加</button>
 			</div>
     	</div>
     </div>
@@ -94,199 +114,27 @@
 	
 
 
-	<div class="col-sm-4">
+	<div class="col-sm-4" ng-repeat="tobj in totalobjs">
 		<div class="panel panel-default mt10">
 
 		  	<table class="table table-bordered">
 		      <div class="panel-heading text-center">
-		      	全部景区 [2016年] [1月－12月]
-		      </div>
-		      <tbody>
-		        <tr>
-		          <td class="text-center">1月</td>
-		          <td class="text-center">1000人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">2月</td>
-		          <td class="text-center">888人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">3月</td>
-		          <td class="text-center">900人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">4月</td>
-		          <td class="text-center">400人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">5月</td>
-		          <td class="text-center">930人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">6月</td>
-		          <td class="text-center">1111人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">7月</td>
-		          <td class="text-center">1000人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">8月</td>
-		          <td class="text-center">1200人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">9月</td>
-		          <td class="text-center">900人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">10月</td>
-		          <td class="text-center">400人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">11月</td>
-		          <td class="text-center">930人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">12月</td>
-		          <td class="text-center">1111人次</td>
-		        </tr>
-		      </tbody>
-		   	</table>
-		</div>
-	</div>
-
-
-
-
-	<div class="col-sm-4">
-		<div class="panel panel-default mt10">
-
-		  	<table class="table table-bordered">
-		      <div class="panel-heading text-center">
-		      	沈阳故宫 [2016年] [1月－12月]
-		      	<a ng-click="del(obj.code)" class="btn pull-right" style="color: red; padding:0px;">
+		      	{{tobj.name}}
+		      	<a ng-click="del(tobj.jqcode)" class="btn pull-right" 
+		      	style="color: red; padding:0px;" ng-show="tobj.jqcode != 0">
 			        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 			    </a>
 		      </div>
 		      <tbody>
-		        <tr>
-		          <td class="text-center">1月</td>
-		          <td class="text-center">28人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">2月</td>
-		          <td class="text-center">48人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">3月</td>
-		          <td class="text-center">40人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">4月</td>
-		          <td class="text-center">19人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">5月</td>
-		          <td class="text-center">86人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">6月</td>
-		          <td class="text-center">27人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">7月</td>
-		          <td class="text-center">28人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">8月</td>
-		          <td class="text-center">48人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">9月</td>
-		          <td class="text-center">40人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">10月</td>
-		          <td class="text-center">19人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">11月</td>
-		          <td class="text-center">86人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">12月</td>
-		          <td class="text-center">27人次</td>
+		        <tr ng-repeat="totalobj in tobj.list">
+		          <td class="text-center" ng-show="tobj.type_month=='1'">{{totalobj.month}}月</td>
+		          <td class="text-center" ng-show="tobj.type_month=='2'">{{totalobj.month}}号</td>
+		          <td class="text-center" ng-show="tobj.type_month=='3'">{{totalobj.month}}时</td>
+		          <td class="text-center">{{totalobj.sum}}人次</td>
 		        </tr>
 		      </tbody>
 		   	</table>
 		</div>
-	</div>
-
-
-	<div class="col-sm-4">
-		<div class="panel panel-default mt10">
-
-		  	<table class="table table-bordered">
-		      <div class="panel-heading text-center">
-		      	沈阳市植物园 [2016年] [1月－12月]
-				<a ng-click="del(obj.code)" class="btn pull-right" style="color: red; padding:0px;">
-			        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-			    </a>
-		      </div>
-		      <tbody>
-		        <tr>
-		          <td class="text-center">1月</td>
-		          <td class="text-center">280人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">2月</td>
-		          <td class="text-center">480人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">3月</td>
-		          <td class="text-center">400人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">4月</td>
-		          <td class="text-center">190人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">5月</td>
-		          <td class="text-center">860人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">6月</td>
-		          <td class="text-center">270人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">7月</td>
-		          <td class="text-center">280人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">8月</td>
-		          <td class="text-center">480人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">9月</td>
-		          <td class="text-center">400人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">10月</td>
-		          <td class="text-center">190人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">11月</td>
-		          <td class="text-center">860人次</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">12月</td>
-		          <td class="text-center">270人次</td>
-		        </tr>
-		      </tbody>
-		   	</table>
-		</div>
-
-
 	</div>
 
 </div>
