--- a/app/21card/views/cardproduct.html
+++ b/app/21card/views/cardproduct.html
@@ -17,10 +17,10 @@
 	</div>
 
 	<div class="form-group">
-		<label class="col-xs-3 control-label">所属区域</label>
+		<label class="col-xs-3 control-label">卡产品类型</label>
 		<div class="col-xs-9">
-			<select class="form-control" ng-model="obj.sys_area" 
-              ng-options="type.value as type.label for type in typearr"
+			<select class="form-control" ng-model="obj.card_type" 
+              ng-options="cardtype.value as cardtype.label for cardtype in cardtypearr"
             >
             </select>
 		</div>
@@ -31,7 +31,7 @@
 		<div class="col-xs-9">
 			<div class="input-group">
 				<span class="input-group-addon">¥</span>
-				<input type="number" class="form-control" placeholder="请输入居游价格" min='0'
+				<input type="number" class="form-control" placeholder="请输入市场价格" min='0'
 				ng-model="obj.market_price"
 				>
 			</div>
@@ -101,7 +101,7 @@
 
   	<div class="form-group">
 	    <label class="col-xs-3 control-label">限制规则</label>
-	    <div class="col-xs-3">
+	    <div class="col-xs-4">
 	    	<label class="radio-inline">
 			  <input type="radio" name="max_limit_type" value="0"
 			  ng-model="obj.max_limit_type"
@@ -141,15 +141,6 @@
   	</div>
 
 	<div class="form-group">
-		<label class="col-xs-3 control-label">下架后提示信息</label>
-		<div class="col-xs-9">
-			<textarea class="form-control" rows="3"
-			ng-model="obj.off_reason"
-			></textarea>
-		</div>
-	</div>
-
-	<div class="form-group">
 		<label class="col-xs-3 control-label">备注</label>
 		<div class="col-xs-9">
 			<textarea class="form-control" rows="3"
@@ -160,7 +151,7 @@
 
 	<button 
     type="button" 
-    class="btn btn-primary btn-lg btn-block" 
+    class="btn btn-success btn-lg col-xs-3 pull-right" 
     ng-click="gogo()"
     >
     提交
@@ -171,3 +162,205 @@
 </div>
 </div>
 </div>
+
+
+
+
+
+<div class="panel panel-success">
+  <div class="panel-heading">卡产品资源</div>
+
+<div class="panel-body">
+    <div class="container-fluid form-horizontal ">
+
+<div class="col-xs-10 col-xs-offset-1 form-horizontal" >
+	
+	<div class="form-group">
+		<label class="col-xs-2 control-label">资源列表</label>
+		<div class="col-xs-2" >
+			<select class="form-control" ng-model="resobj.sub_table_code" 
+              ng-options="subtable.value as subtable.label for subtable in subtablearr"
+            >
+            </select>
+        </div>
+        <div class="col-xs-3" >
+        	<label class="radio-inline">
+			  <input type="radio" name="sub_table_used_type" 
+			  ng-model="resobj.sub_table_used_type" value="0"> 资源校验
+			</label>
+			<label class="radio-inline">
+			  <input type="radio" name="sub_table_used_type" 
+			  ng-model="resobj.sub_table_used_type" value="1"> 无需校验
+			</label>
+        </div>
+        <div class="col-xs-3" >
+        	<label class="radio-inline">
+			  <input type="radio" name="sub_table_data_type" 
+			  ng-model="resobj.sub_table_data_type" value="0"> 一对一
+			</label>
+			<label class="radio-inline">
+			  <input type="radio" name="sub_table_data_type" 
+			  ng-model="resobj.sub_table_data_type" value="1"> 一对多
+			</label>
+        </div>
+        <div class="col-xs-2" >
+        	<button 
+		    type="button" 
+		    class="btn btn-success btn-block pull-right" 
+		    ng-click="resourcesok()"
+		    >
+		    添加
+		    </button>
+
+        </div>
+
+	</div>
+
+
+	<div class="panel panel-default col-xs-8 col-xs-offset-2">
+		<table class="table">
+        <tbody>
+          <tr ng-repeat="res in resources">
+            <td>{{res.sub_table_name}}</td>
+            <td>{{res.sub_table_data_name}}</td>
+            <td>{{res.sub_table_used_name}}</td>
+            <td>
+	           	<a ng-click="cardpooldel(res.sub_table_code)" class="btn pull-right" style="color: red; padding:0px;" >
+	        	<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+	      		</a>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+	</div>
+
+
+
+</div>
+
+</div>
+</div>
+</div>
+
+
+
+
+<div class="panel panel-success" ng-show="resourcesflag.pool !== undefined">
+  <div class="panel-heading">卡池</div>
+
+<div class="panel-body">
+    <div class="container-fluid form-horizontal ">
+
+<div class="col-xs-10 col-xs-offset-1 form-horizontal" >
+	
+	<div class="form-group">
+		<label class="col-xs-2 control-label">选择卡池</label>
+		<div class="col-xs-8">
+			<select class="form-control" ng-model="cardpoolobj.pool_code" 
+              ng-options="cardpool.pool_code as cardpool.pool_name for cardpool in cardpoolarr"
+            >
+            </select>
+		</div>
+		<div class="col-xs-2" >
+        	<button 
+		    type="button" 
+		    class="btn btn-success btn-block pull-right" 
+		    ng-click="cardpoolok()"
+		    >
+		    添加
+		    </button>
+
+        </div>
+	</div>
+
+	<div class="panel panel-default col-xs-8 col-xs-offset-2">
+		<table class="table">
+        <tbody>
+          <tr ng-repeat="cardpool in cardproduct_cardpoollistarr">
+            <td>{{cardpool.pool_name}}</td>
+            <td>
+	           	<a ng-click="cardpooldel(cardpool.pool_code)" class="btn pull-right" style="color: red; padding:0px;" >
+	        	<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+	      		</a>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+	</div>
+
+	<!-- <button 
+    type="button" 
+    class="btn btn-success btn-lg col-xs-3 pull-right" 
+    ng-click="gogo()"
+    >
+    提交
+    </button> -->
+
+</div>
+
+</div>
+</div>
+</div>
+
+
+
+
+<div class="panel panel-success" ng-show="resourcesflag.ticket !== undefined">
+  <div class="panel-heading">票销售品</div>
+
+<div class="panel-body">
+    <div class="container-fluid form-horizontal ">
+
+<div class="col-xs-10 col-xs-offset-1 form-horizontal" >
+	
+	<div class="form-group">
+		<label class="col-xs-2 control-label">填写销售品编号</label>
+		<div class="col-xs-8">
+			<input type="text" class="form-control" 
+			ng-model="ticketobj.ticket_code"
+			>
+		</div>
+		<div class="col-xs-2" >
+        	<button 
+		    type="button" 
+		    class="btn btn-success btn-block pull-right" 
+		    ng-click="ticketok()"
+		    >
+		    添加
+		    </button>
+
+        </div>
+	</div>
+
+
+	<div class="panel panel-default col-xs-8 col-xs-offset-2">
+		<table class="table">
+        <tbody>
+          <tr ng-repeat="ticket in cardproduct_ticketarr">
+            <td>{{ticket.ticket_code}}</td>
+            <td>
+	           	<a ng-click="ticketdel(ticket.ticket_code)" class="btn pull-right" style="color: red; padding:0px;" >
+	        	<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+	      		</a>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+	</div>
+
+	<button 
+    type="button" 
+    class="btn btn-success btn-lg col-xs-3 pull-right" 
+    ng-click="gogo()"
+    >
+    提交
+    </button>
+
+</div>
+
+</div>
+</div>
+</div>
+
+
+
