--- a/app/19guide/views/shakedevicelist.html
+++ b/app/19guide/views/shakedevicelist.html
@@ -46,7 +46,8 @@
 	              </div>
                   
 
-                  <button type="button" class="btn btn-default search pull-right" ng-click="create()">添加设备</button>
+                  <button type="button" class="btn btn-default search pull-right" 
+                  	ng-click="create()" ng-show="company_code == 'L0002'">添加设备</button>
 
                   &nbsp;&nbsp;&nbsp;&nbsp;
 
