--- a/app/21card/views/addcard.html
+++ b/app/21card/views/addcard.html
@@ -1,17 +1,43 @@
 <form class="form-horizontal" role="form">
-  <h2>添加卡</h2>
-  <div class="form-group">
-    <label class="col-md-3 col-md-offset-1 radio-inline ">
-      <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">单张
-    </label>
-    <div class="col-md-4">
-      <input type="text" class="form-control" id="inputLottry" placeholder="** ** ** ** ** ** **"
-      ng-model="lottry.sevenstart"
-      >
+    <h2>添加卡</h2>
+    <div class="form-group">
+        <label class="col-md-1 col-md-offset-1 radio-inline ">
+            <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="2" ng-model="cardinfo.type">单张
+        </label>
+        <div class="col-md-2">
+            <input type="text" class="form-control" id="inputLottry" placeholder="** ** ** ** ** ** **"
+                   ng-model="cardinfo.cardnum"
+            >
+        </div>
     </div>
 
-  </div>
+    <div class="form-group">
+        <label class="col-md-1 col-md-offset-1 radio-inline ">
+            <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="1" ng-model="cardinfo.type">卡段
+        </label>
 
-  
 
- </form>
+        <div class="col-md-2">
+            <input type="text" class="form-control" id="inputLottry" placeholder="** ** ** ** ** ** **"
+                   ng-model="cardinfo.startnum"
+            >
+        </div>
+
+        <div class="form-group">
+            <label for="inputLottry" class="control-label col-md-1">到</label>
+            <div class="col-md-2">
+                <input type="text" class="form-control col-md-offset-3" id="inputLottry" placeholder="** ** ** ** ** ** **"
+                       ng-model="cardinfo.endnum"
+                >
+            </div>
+        </div>
+
+
+    </div>
+
+    <div>
+        <button type="button" class="col-md-1 col-md-offset-2 btn btn-primary btn-xs" ng-click="addcard()">添加</button>
+    </div>
+
+
+</form>
