卡产品详情

--- a/app/21card/views/cardproduct.html
+++ b/app/21card/views/cardproduct.html
@@ -225,7 +225,7 @@
             <td>{{res.sub_table_data_name}}</td>
             <td>{{res.sub_table_used_name}}</td>
             <td>
-	           	<a ng-click="cardpooldel(res.sub_table_code)" class="btn pull-right" style="color: red; padding:0px;" >
+	           	<a ng-click="resourcesdel(res.sub_table_code, res.product_code)" class="btn pull-right" style="color: red; padding:0px;" >
 	        	<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 	      		</a>
             </td>
