'添加景区综合评价'

--- a/app/19guide/views/evaluatechart3.html
+++ b/app/19guide/views/evaluatechart3.html
@@ -5,16 +5,17 @@
             <div class="col-sm-12">
 
 				<label>景区</label>&nbsp;&nbsp;
-				<select class="form-control" ng-model="searchform.binding_type">
-					<option value="1"> 沈阳市故宫 </option>
-					<option value="2"> 沈阳市植物园 </option>
-					<option value=""> -- 全部 -- </option>
-				</select>
+				<select class="form-control" ng-model="obj.binding_company_code" 
+	              ng-options="type.binding_company_code as type.name for type in companyarr"
+	              ng-change="changecompany()"
+	            >
+	            	<option value=""> -- 全部 -- </option>
+	            </select>
 				&nbsp;&nbsp;
 
 				
 
-				<button type="button" class="btn btn-default search " ng-click="search()">追加</button>
+				<button type="button" class="btn btn-default search " ng-click="add()">追加</button>
 
 			</div>
 
@@ -26,17 +27,21 @@
 
 <div class="col-sm-12">
 
-	<div class="col-sm-7" >
+	<div class="col-sm-8" >
 		<canvas id="radar" class="chart chart-radar"
 		  chart-data="data" chart-options="options" chart-labels="labels">
 		</canvas> 
 	</div>
 
-	<div class="col-sm-5">
+	<div class="col-sm-4" ng-repeat="tobj in totalobjs">
 
 		<div class="panel panel-default">
 			<div class="panel-heading text-center">
-		      	全部景区
+		      	{{tobj.jqname}}
+		      	<a ng-click="del(tobj.jqcode)" class="btn pull-right" 
+		      	style="color: red; padding:0px;" ng-show="tobj.jqcode != 0">
+			        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+			    </a>
 		    </div>
 		  	<table class="table table-bordered">
 		      <thead>
@@ -46,217 +51,14 @@
 		        </tr>
 		      </thead>
 		      <tbody>
-		        <tr>
-		          <td class="text-center">评价一</td>
-		          <td class="text-center">65%</td>
-		        </tr>
-		        <tr>
-		          <td class="text-center">评价二</td>
-		          <td class="text-center">65%</td>
-		        </tr><tr>
-		          <td class="text-center">评价三</td>
-		          <td class="text-center">65%</td>
-		        </tr><tr>
-		          <td class="text-center">评价四</td>
-		          <td class="text-center">65%</td>
-		        </tr><tr>
-		          <td class="text-center">评价五</td>
-		          <td class="text-center">65%</td>
-		        </tr><tr>
-		          <td class="text-center">评价六</td>
-		          <td class="text-center">65%</td>
-		        </tr><tr>
-		          <td class="text-center">评价七</td>
-		          <td class="text-center">65%</td>
-		        </tr><tr>
-		          <td class="text-center">评价八</td>
-		          <td class="text-center">65%</td>
-		        </tr><tr>
-		          <td class="text-center">评价九</td>
-		          <td class="text-center">65%</td>
-		        </tr><tr>
-		          <td class="text-center">评价十</td>
-		          <td class="text-center">65%</td>
+		        <tr ng-repeat="totalobj in tobj.list">
+		          <td class="text-center">{{totalobj.question}}</td>
+		          <td class="text-center">{{totalobj.hpl}}%</td>
 		        </tr>
 		      </tbody>
 		   	</table>
 		</div>
 
-	</div>
-
-</div>
-
-
-
-
-
-
-<div class="col-sm-4">
-
-	<div class="panel panel-default">
-		<div class="panel-heading text-center">
-	      	沈阳市故宫
-	      	<a ng-click="del(obj.code)" class="btn pull-right" style="color: red; padding:0px;">
-		        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-		    </a>
-	    </div>
-	  	<table class="table table-bordered">
-	      <thead>
-	        <tr>
-	          <th class="col-sm-8 text-center">问题</th>
-	          <th class="col-sm-4 text-center">好评百分比</th>
-	        </tr>
-	      </thead>
-	      <tbody>
-	        <tr>
-	          <td class="text-center">评价一</td>
-	          <td class="text-center">65%</td>
-	        </tr>
-	        <tr>
-	          <td class="text-center">评价二</td>
-	          <td class="text-center">65%</td>
-	        </tr><tr>
-	          <td class="text-center">评价三</td>
-	          <td class="text-center">65%</td>
-	        </tr><tr>
-	          <td class="text-center">评价四</td>
-	          <td class="text-center">65%</td>
-	        </tr><tr>
-	          <td class="text-center">评价五</td>
-	          <td class="text-center">65%</td>
-	        </tr><tr>
-	          <td class="text-center">评价六</td>
-	          <td class="text-center">65%</td>
-	        </tr><tr>
-	          <td class="text-center">评价七</td>
-	          <td class="text-center">65%</td>
-	        </tr><tr>
-	          <td class="text-center">评价八</td>
-	          <td class="text-center">65%</td>
-	        </tr><tr>
-	          <td class="text-center">评价九</td>
-	          <td class="text-center">65%</td>
-	        </tr><tr>
-	          <td class="text-center">评价十</td>
-	          <td class="text-center">65%</td>
-	        </tr>
-	      </tbody>
-	   	</table>
-	</div>
-
-</div>
-
-
-
-
-<div class="col-sm-4">
-
-	<div class="panel panel-default">
-		<div class="panel-heading text-center">
-	      	沈阳市植物园
-	      	<a ng-click="del(obj.code)" class="btn pull-right" style="color: red; padding:0px;">
-		        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-		    </a>
-	    </div>
-	  	<table class="table table-bordered">
-	      <thead>
-	        <tr>
-	          <th class="col-sm-8 text-center">问题</th>
-	          <th class="col-sm-4 text-center">好评百分比</th>
-	        </tr>
-	      </thead>
-	      <tbody>
-	        <tr>
-	          <td class="text-center">评价一</td>
-	          <td class="text-center">65%</td>
-	        </tr>
-	        <tr>
-	          <td class="text-center">评价二</td>
-	          <td class="text-center">65%</td>
-	        </tr><tr>
-	          <td class="text-center">评价三</td>
-	          <td class="text-center">65%</td>
-	        </tr><tr>
-	          <td class="text-center">评价四</td>
-	          <td class="text-center">65%</td>
-	        </tr><tr>
-	          <td class="text-center">评价五</td>
-	          <td class="text-center">65%</td>
-	        </tr><tr>
-	          <td class="text-center">评价六</td>
-	          <td class="text-center">65%</td>
-	        </tr><tr>
-	          <td class="text-center">评价七</td>
-	          <td class="text-center">65%</td>
-	        </tr><tr>
-	          <td class="text-center">评价八</td>
-	          <td class="text-center">65%</td>
-	        </tr><tr>
-	          <td class="text-center">评价九</td>
-	          <td class="text-center">65%</td>
-	        </tr><tr>
-	          <td class="text-center">评价十</td>
-	          <td class="text-center">65%</td>
-	        </tr>
-	      </tbody>
-	   	</table>
-	</div>
-
-</div>
-
-
-
-<div class="col-sm-4">
-
-	<div class="panel panel-default">
-		<div class="panel-heading text-center">
-	      	沈阳市森林动物园
-	      	<a ng-click="del(obj.code)" class="btn pull-right" style="color: red; padding:0px;">
-		        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-		    </a>
-	    </div>
-	  	<table class="table table-bordered">
-	      <thead>
-	        <tr>
-	          <th class="col-sm-8 text-center">问题</th>
-	          <th class="col-sm-4 text-center">好评百分比</th>
-	        </tr>
-	      </thead>
-	      <tbody>
-	        <tr>
-	          <td class="text-center">评价一</td>
-	          <td class="text-center">65%</td>
-	        </tr>
-	        <tr>
-	          <td class="text-center">评价二</td>
-	          <td class="text-center">65%</td>
-	        </tr><tr>
-	          <td class="text-center">评价三</td>
-	          <td class="text-center">65%</td>
-	        </tr><tr>
-	          <td class="text-center">评价四</td>
-	          <td class="text-center">65%</td>
-	        </tr><tr>
-	          <td class="text-center">评价五</td>
-	          <td class="text-center">65%</td>
-	        </tr><tr>
-	          <td class="text-center">评价六</td>
-	          <td class="text-center">65%</td>
-	        </tr><tr>
-	          <td class="text-center">评价七</td>
-	          <td class="text-center">65%</td>
-	        </tr><tr>
-	          <td class="text-center">评价八</td>
-	          <td class="text-center">65%</td>
-	        </tr><tr>
-	          <td class="text-center">评价九</td>
-	          <td class="text-center">65%</td>
-	        </tr><tr>
-	          <td class="text-center">评价十</td>
-	          <td class="text-center">65%</td>
-	        </tr>
-	      </tbody>
-	   	</table>
 	</div>
 
 </div>
