--- a/app/19guide/views/evaluatechart.html
+++ b/app/19guide/views/evaluatechart.html
@@ -275,7 +275,7 @@
 		      max-size="maxSize" 
 		      class="pagination-sm" 
 		      boundary-links="true" 
-		      ng-change="load()"
+		      ng-change="pageload()"
 		      items-per-page="itemsPerPage"
 		      previous-text="上一页"
 		      next-text="下一页"
