--- a/app/21card/views/addcardpool.html
+++ b/app/21card/views/addcardpool.html
@@ -1,5 +1,5 @@
 <form class="form-horizontal" role="form">
-  <h2>创建卡池基本信息</h2>
+  <h2>添加/修改卡池基本信息</h2>
   <div class="form-group">
     <label for="inputLottry" class="col-sm-2 control-label">卡池名称</label>
     <div class="col-md-4">
@@ -24,7 +24,7 @@
 
   
   <div>
-  <button type="button" class="btn btn-primary btn-sm col-md-1 col-md-offset-5" ng-click="savecardpool()">保存</button>
+  <button type="button" class="btn btn-primary btn-sm col-md-1 col-md-offset-5" ng-click="savecardpool()">确定</button>
   </div>
 
   
