--- a/app/21card/views/releasecard.html
+++ b/app/21card/views/releasecard.html
@@ -1,57 +1,80 @@
 <form class="form-horizontal" role="form">
-  <h2>释放卡</h2>
-  <div class="form-group">
-    <label class="col-md-1 col-md-offset-1 radio-inline ">
-      <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="2" ng-model="cardinfo.status">单张
-    </label>
-    <div class="col-md-2">
-      <input type="text" class="form-control" id="inputLottry" placeholder="** ** ** ** ** ** **"
-      ng-model="cardinfo.cardnum"
-      >
-    </div>
+<h2>卡池详情</h2>
+<div class=" col-sm-12">
+  <div class="col-sm-6">  
+	  <div class="panel panel-default">
+	    <div class="panel-body form-inline">
+		    <label for="inputLottry" class="control-label">总卡量</label>
+		    <input class="form-control wid20 input-sm text-center" id="disabledInput" type="text" placeholder="111" disabled>
+		    <label for="inputLottry" class="control-label">未使用</label>
+		    <input class="form-control wid20 input-sm text-center" id="disabledInput" type="text" placeholder="111" disabled>
+		    <label for="inputLottry" class="control-label">已使用</label>
+		    <input class="form-control wid20 input-sm text-center" id="disabledInput" type="text" placeholder="111" disabled>
+	    </div>
+	  </div>
   </div>
-
-  <div class="form-group">
-    <label class="col-md-1 col-md-offset-1 radio-inline ">
-      <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="1" ng-model="cardinfo.type">卡段
-    </label>
-    <div class="col-md-2">
-      <input type="text" class="form-control" id="inputLottry" placeholder="** ** ** ** ** ** **"
-      ng-model="cardinfo.startnum"
-      >
-    </div>
-    
-    <div class="form-group">
-     <label for="inputLottry" class="control-label col-md-1">到</label>
-      <div class="col-md-2">
-      <input type="text" class="form-control col-md-offset-3" id="inputLottry" placeholder="** ** ** ** ** ** **"
-      ng-model="cardinfo.endnum"
-      >
-      </div>
-    </div>
+  <div class="col-sm-6">
+	  <div class="panel panel-default">
+	    <div class="panel-body">
+	    	<div class="form-group form-inline mb0">
+	    		<div class="col-sm-10">
+			      <input type="text" class="form-control" ng-model="searchform.name" >
+			      <input type="text" class="form-control" ng-model="searchform.name" >        
+			      <select class="form-control">
+			        <option>未使用</option>
+			        <option>已使用</option>
+			        <option>全部</option>
+			      </select>
+			      <button type="button" class="btn btn-info new">搜索</button>
+			    </div>
+		    </div>
+	    </div>
+	  </div>
   </div>
-
-  <div class="form-group">
-    <label class="col-md-1 col-md-offset-1 radio-inline ">
-      <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="3" ng-model="cardinfo.status">全部
-    </label>
-    <div class="col-md-2">
-      <input type="text" class="form-control" id="inputLottry" placeholder="** ** ** ** ** ** **"
-      ng-model="cardinfo.cardnum"
-      >
-    </div>
-  </div>
-
-  
-  <div class="form-group">
-  </div>
-    <button type="button" class="col-md-1 col-md-offset-2 btn btn-danger btn-xs" ng-click="resivecard()">释放</button>
-  </div>
-  </div>  
+</div>
 
 
- 
-  <div class="form-group">
-  
-  </div>
- </form>
+
+
+
+<div class="form-group">
+<div class="col-md-4 col-md-offset-1 panel panel-default table-responsive">
+     <table ng-click="getlist()" class="table table-bordered">
+	    <thead>
+	      <tr>
+	        <th class="col-md-2 text-center">起始卡号</th>
+	        <th class="col-md-2 text-center">结束卡号</th>
+	        
+	      </tr>
+	    </thead>
+	    <tbody>
+	     <tr ng-repeat = "cardinfo in cardinfos">
+	       <td class="col-md-2 text-center">{{cardinfo.mincard}}</td>
+	       <td class="col-md-2 text-center">{{cardinfo.maxcard}}</td>
+	     </tr>
+	    </tbody>
+	 </table>
+</div>
+<div class="col-md-4 col-md-offset-2 panel panel-default table-responsive">
+     <table ng-click="getlist()" class="table table-bordered">
+	    <thead>
+	      <tr>
+	        <th class="col-md-2 text-center">卡号</th>
+	        <th class="col-md-2 text-center">操作</th>
+	        
+	      </tr>
+	    </thead>
+	    <tbody>
+	     <tr ng-repeat = "cardinfo in cardinfos">
+	       <td class="col-md-2 text-center">{{cardinfo.mincard}}</td>
+	       <td class="col-md-2 text-center">{{cardinfo.maxcard}}</td>
+	     </tr>
+	    </tbody>
+	 </table>
+</div>	 
+</div>
+
+
+
+</form>
+
