--- a/app/21card/views/resivecardinfo.html
+++ b/app/21card/views/resivecardinfo.html
@@ -1,5 +1,5 @@
 <form class="form-horizontal" role="form">
-  <h2>修改卡信息</h2>
+  <h2>修改卡状态</h2>
   
   <div class="form-group">
     <label for="inputLottry" class="col-sm-2 control-label">卡号</label>
