--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -285,6 +285,22 @@
 				  	</div>
 
 				  	<div class="form-group">
+					    <label class="col-xs-3 control-label">是否允许退票</label>
+					    <div class="col-xs-9">
+					    	<label class="radio-inline">
+							  <input type="radio" name="back_type" value="0"
+							  ng-model="saleobj.back_type"
+							  > 允许
+							</label>
+							<label class="radio-inline">
+							  <input type="radio" name="back_type" value="1"
+							  ng-model="saleobj.back_type"
+							  > 不允许
+							</label>
+					    </div>
+				  	</div>
+
+				  	<div class="form-group">
 						<label class="col-xs-3 control-label">团产品-预定须知</label>
 						<div class="col-xs-9">
 							<textarea class="form-control" rows="3"
