--- a/app/21card/views/basecardlist.html
+++ b/app/21card/views/basecardlist.html
@@ -20,25 +20,25 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th class="col-md-3 text-center">卡产品名称</th>
-        <th class="col-md-1 text-center">卡产品类型</th>
-        <th class="col-md-1 text-center">市场价格</th>
-        <th class="col-md-1 text-center">指导价格</th>
-        <th class="col-md-2 text-center">绑定卡池编号</th>
-        <th class="col-md-2 text-center">绑定票销售品编号</th>
-        <th class="col-md-1 text-center">状态</th>
-        <th class="col-md-1 text-center">操作</th>
+        <th class="col-md-3 text-center">卡段</th>
+        <th class="col-md-3 text-center">批次</th>
+        <th class="col-md-2 text-center">卡状态</th>
+        <th class="col-md-2 text-center">制作状态</th>
+        <th class="col-md-2 text-center">操作</th>
       </tr>
     </thead>
     <tbody>
       <tr ng-repeat="obj in objs">
-        <td class="text-center">{{obj.name}}</td>
-        <td class="text-center">{{obj.card_type}}</td>
-        <td class="text-center">{{obj.market_price}}</td>
-        <td class="text-center">{{obj.guide_price}}</td>
-        <td class="text-center">{{obj.pool_code}}</td>
-        <td class="text-center">{{obj.ticket_code}}</td>
-        <td class="text-center">{{obj.state_name}}</td>
+        <td class="text-center">{{obj.maxcard}} - {{obj.mincard}}</td>
+        <td class="text-center">{{obj.card_make_batch}}</td>
+        <td class="text-center">
+          {{obj.card_giveout_status}}<br>
+          {{obj.card_add_time}}
+        </td>
+        <td class="text-center">
+          {{obj.card_make_status}}<br>
+          {{obj.card_make_time}}
+        </td>
         <td class="text-center">
           <a ng-click="edit(obj.id)" class="btn btn-info btn-xs">编辑</a>
           <a ng-show="obj.state=='0' || obj.state=='2'"
@@ -46,7 +46,6 @@
           <a ng-show="obj.state=='1'"
           ng-click="stop(obj.code)" class="btn btn-success btn-xs">下架</a>
         </td>
-        </th>
       </tr>
     </tbody>
   </table>
