--- a/app/21card/views/resivecardinfo.html
+++ b/app/21card/views/resivecardinfo.html
@@ -19,19 +19,19 @@
 		        <tbody>
 		          <tr>
 		            <td class="col-md-1 text-center">姓名</td>
-		            <td class="col-md-3">{{user.username}}</td>
+		            <td class="col-md-3">{{userinfo.username}}</td>
 		          </tr>
 		          <tr>
 		            <td class="col-xs-1 text-center">电话</td>
-		            <td class="col-xs-3">{{user.lotter}}</td>
+		            <td class="col-xs-3">{{userinfo.mobile}}</td>
 		          </tr>
 		          <tr>
 		            <td class="col-xs-1 text-center">身份证</td>
-		            <td class="col-xs-3">{{user.mobile}}</td>
+		            <td class="col-xs-3">{{userinfo.papersno}}</td>
 		          </tr>
 		          <tr>
 		            <td class="col-xs-1 text-center">卡状态</td>
-		            <td class="col-xs-3">{{user.period}}</td>
+		            <td class="col-xs-3">{{userinfo.card_status_z}}</td>
 		          </tr>
 		          
 		        </tbody>
